src/objects/NDA_Notifier__c.object
<CustomObject>
    <description>This object saves all notification receivers set for the NDA. Users are a look up from core directory.</description>
    <fields>
        <fullName>NDA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDA</label>
        <referenceTo>NDA__c</referenceTo>
        <relationshipLabel>NDA Notifiers</relationshipLabel>
        <relationshipName>NDA_Notifiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notifier_Email__c</fullName>
        <formula>Notifier__r.Mail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notifier Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notifier</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>NDA Notifiers</relationshipLabel>
        <relationshipName>NDA_Notifiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NDA Notifier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NDA__c</columns>
        <columns>Notifier__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>NDA Notifiers ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NDA Notifiers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>